# ZPHR-STM32-0007

./: .gitignore  .vscode-ctags  CMakeLists.txt  Kconfig  README.md  VERSION  prj.conf
bsp/: hfn_f411ce.overlay
bsp/boards/hfn_f411ce/: Kconfig.defconfig  Kconfig.hfn_f411ce  board.yml  hfn_f411ce.dts  hfn_f411ce.yaml
scripts/: command_response.sh  simulator.py
src/: adc.c  buzzer.c  display_manager.c  main.c  usb_cdc.c
src/include/: adc.h  buzzer.h  display_manager.h  main.h  usb_cdc.h
src/screen/: basic_events.c  basic_events.h  basic_widgets.c  basic_widgets.h  main_screen.c  main_screen.h  main_screen_ex1.c  main_screen_ex1.h
